[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Images/Cuadraro-Gris-04.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scenes/Enemy_shoot.gd" type="Script" id=2]
[ext_resource path="res://Assets/Scenes/IA_shooter.gd" type="Script" id=3]
[ext_resource path="res://Assets/Scenes/Enemy_bullet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Scripts/StateMachineEnemyShoot.gd" type="Script" id=5]
[ext_resource path="res://Assets/Sounds/Hit_Hurt_Enemy.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Scripts/DeathEnemyShot.gd" type="Script" id=7]
[ext_resource path="res://Assets/Scripts/EngageEnemyShoot.gd" type="Script" id=8]
[ext_resource path="res://Assets/Scripts/PatrolEnemy.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5988, 31.5466 )

[sub_resource type="CircleShape2D" id=2]
radius = 30.3859

[sub_resource type="CircleShape2D" id=3]
radius = 448.071

[node name="Enemy_shoot" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 2 )
bullet = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Patrol" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="Engage" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="IA_shooter" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="ShootTimer" type="Timer" parent="IA_shooter"]

[node name="MoveTimer" type="Timer" parent="IA_shooter"]
wait_time = 0.2
one_shot = true

[node name="PatrolTimer" type="Timer" parent="IA_shooter"]

[node name="Detector" type="Area2D" parent="IA_shooter"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="IA_shooter/Detector"]
shape = SubResource( 3 )

[node name="BulletSpawner" type="Position2D" parent="."]
position = Vector2( 40, 0 )

[node name="HurtAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[connection signal="timeout" from="IA_shooter/ShootTimer" to="IA_shooter" method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="IA_shooter/MoveTimer" to="IA_shooter" method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="IA_shooter/PatrolTimer" to="IA_shooter" method="_on_PatrolTimer_timeout"]
[connection signal="body_entered" from="IA_shooter/Detector" to="IA_shooter" method="_on_Detector_body_entered"]
[connection signal="body_exited" from="IA_shooter/Detector" to="IA_shooter" method="_on_Detector_body_exited"]
